--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/mevanloon/8ball#readme",
   "scripts": {
-    "start": "browser-sync -f . --https --no-open"
+    "start": "browser-sync -f . --no-open",
+    "start-https": "browser-sync -f . --https --no-open"
   }
 }
